# NAMOD

./: CMakeLists.txt  CMakeLists.txt~  README.md  Vector3D.cpp  Vector3D.h  dual_camera.cpp  global_variables.cpp  global_variables.h  intrinsic_camera_parameter.cpp  intrinsic_camera_parameter.h  list_of_pixel_positions.cpp  list_of_pixel_positions.h  main_menu.cpp  main_menu.h  mirror.cpp  mirror.h  pointing_direction.cpp  pointing_direction.h  programm_verbosity.cpp  programm_verbosity.h  quick_align.cpp  quick_align.h  reflector.cpp  reflector.h  sccan_analysis_point.cpp  sccan_analysis_point.h  sccan_image.cpp  sccan_image.h  sccan_point_analysis.cpp  sccan_point_analysis.h  sccan_point_pair.cpp  sccan_point_pair.h  sccan_point_pair_handler.cpp  sccan_point_pair_handler.h  simple_image.cpp  simple_image.h  snapshot.cpp  snapshot.h  star_in_image.cpp  star_in_image.h  (+10 more)
docu/: docu.aux  docu.tex  docu.tex~
mirror_response_analysis/: CalcWeightedMean.m  hist3w.asv  hist3w.m  mrm_anlysis.asv  mrm_anlysis.m
mirror_response_analysis/final_sccan/: mirror_ID10_response_map.csv  mirror_ID11_response_map.csv  mirror_ID12_response_map.csv  mirror_ID13_response_map.csv  mirror_ID14_response_map.csv  mirror_ID15_response_map.csv  mirror_ID16_response_map.csv  mirror_ID17_response_map.csv  mirror_ID18_response_map.csv  mirror_ID19_response_map.csv  mirror_ID21_response_map.csv  mirror_ID22_response_map.csv  mirror_ID23_response_map.csv  (+17 more)
test/: 20131108_1654_snapshot_1.info  20131108_1654_snapshot_1.int  20131108_1657_snapshot_1.info  20131108_1657_snapshot_1.int  program.log~
(+29 files in other folders)
